WhitelistLogLines cleanup